<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
            <ImageView
                    android:id="@+id/ivStars"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:src="@drawable/star_s"/>
            <TextView
                    android:id="@+id/tvStars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/lblSuites_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/sSuites_availability"/>
        <TextView
                android:id="@+id/tvSuites_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/lblAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/sAddress" />
        <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/lblDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/sDistance" />

        <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>
